force-app/main/default/objects/User/fields/CommercientSF6__SalespersonCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__SalespersonCode__c</fullName>
    <label>SalespersonCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>