force-app/main/default/objects/User/fields/Externalid__c.field-meta.xml
<CustomField>
    <fullName>Externalid__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External Id for the user</inlineHelpText>
    <label>Externalid</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>