force-app/main/default/objects/User/fields/MPM4_BASE__Start__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Start__c</fullName>
    <formula>TEXT(StartDay)</formula>
    <label>Start Time</label>
    <type>Text</type>
</CustomField>